# adventofcode2022

./: .markdownlint.yaml  .pre-commit-config.yaml  README.md  cspell.yaml  pyproject.toml
Day_1_Calorie_Counting/: day01.md  day01.py  day01_part1.md  day01_part2.md
pymaoc2022/: day01.py  day02.py  day02_part2.md  day03.py  day03_part1.md  day04.py
pymaoc2022/instructions/: day02_part1.md  day03_part2.md  day04_part1.md
tests/: day1_test.py  day2_test.py  day3_test.py  day4_test.py
