[tool.poetry]
name = "pym_s_advent_of_code_2022"
version = "0.1.0"
description = "My solution to Advent of Code 2022 challenge"
authors = ["Pierre-Yves Martin <pym.aldebaran@pm.me>"]
license = "GPL-v3.0"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
python_files = "*.py"
